# postgresql-sync-map

./: README.md  postgresql-sync-map.cabal
report/: RusLan.xlsx  case.xlsx  report.xlsx
report/result/: case1.xlsx
src/: Test.hs
src/Database/PostgreSQL/: Models.hs  Report.hs  Sync.hs  Syncs.hs
src/Database/PostgreSQL/Report/: Function.hs  Xlsx.hs
src/Database/PostgreSQL/Sync/: Base.hs  Condition.hs  JSON.hs  Types.hs
