name:           postgresql-sync-map
version:        0.1.0
synopsis:       Synchronizing postgresql row and key-value container
homepage:       http://github.com/mvoidex/postgresql-sync-map
author:         Alexandr `voidex` Ruchkin
license:        BSD3
cabal-version:  >= 1.10
build-type:     Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base                  >= 4 && < 5,
        aeson,
        blaze-builder,
        conduit,
        containers,
        filepath,
        directory,
        bytestring,
        mtl,
        transformers,
        time,
        text,
        postgresql-simple,
        xlsx,
        regex-posix,
        MonadCatchIO-transformers,
        simple-log
    exposed-modules:
        Database.PostgreSQL.Sync.Base
        Database.PostgreSQL.Sync
        Database.PostgreSQL.Syncs
        Database.PostgreSQL.Models
        Database.PostgreSQL.Report
        Database.PostgreSQL.Report.Function
        Database.PostgreSQL.Report.Xlsx
        Database.PostgreSQL.Sync.Condition
        Database.PostgreSQL.Sync.Types
    other-modules:
        Test
