name:           postgresql-sync-map
version:        0.1.3
synopsis:       Synchronizing postgresql row and key-value container
homepage:       http://github.com/mvoidex/postgresql-sync-map
author:         Alexandr `voidex` Ruchkin
license:        BSD3
cabal-version:  >= 1.10
build-type:     Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >= 4 && < 5,
        aeson >= 0.6 && < 0.7,
        blaze-builder >= 0.3 && < 0.4,
        conduit >= 0.4 && < 0.6,
        containers >= 0.4 && < 0.6,
        filepath >= 1.3 && < 1.4,
        directory >= 1.1 && < 1.3,
        bytestring >= 0.9 && < 0.11,
        mtl >= 2.0 && < 2.2,
        transformers >= 0.2 && < 0.4,
        time >= 1.4 && < 1.5,
        text >= 0.11 && < 0.12,
        postgresql-simple >= 0.1.1 && < 0.2,
        xlsx >= 0.0.1 && < 0.1,
        regex-posix >= 0.95 && < 0.96,
        MonadCatchIO-transformers >= 0.2 && < 0.4,
        old-locale >= 1.0 && < 1.1,
        simple-log >= 0.1.2 && < 0.2
    exposed-modules:
        Database.PostgreSQL.Sync.Base
        Database.PostgreSQL.Sync
        Database.PostgreSQL.Syncs
        Database.PostgreSQL.Models
        Database.PostgreSQL.Report
        Database.PostgreSQL.Report.Function
        Database.PostgreSQL.Report.Xlsx
        Database.PostgreSQL.Sync.Condition
        Database.PostgreSQL.Sync.Types
        Database.PostgreSQL.Sync.JSON
    other-modules:
        Test
