name:           postgresql-sync-map
version:        0.2.1
synopsis:       Synchronizing postgresql row and key-value container
homepage:       http://github.com/mvoidex/postgresql-sync-map
author:         Alexandr `voidex` Ruchkin
license:        BSD3
cabal-version:  >= 1.10
build-type:     Simple
tested-with:    GHC == 7.6.1

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        MonadCatchIO-transformers       >= 0.2 && < 0.4,
        aeson                           >= 0.6 && < 0.7,
        base                            >= 4 && < 5,
        blaze-builder                   >= 0.3 && < 0.4,
        bytestring                      >= 0.9 && < 0.11,
        conduit                         >= 0.4 && < 0.6,
        containers                      >= 0.4 && < 0.6,
        directory                       >= 1.1 && < 1.3,
        filepath                        >= 1.3 && < 1.4,
        mtl                             >= 2.0 && < 2.2,
        old-locale                      >= 1.0 && < 1.1,
        postgresql-simple               == 0.2.*,
        regex-posix                     >= 0.95 && < 0.96,
        simple-log                      >= 0.1.5 && < 0.2,
        text                            >= 0.11 && < 0.12,
        time                            >= 1.4 && < 1.5,
        transformers                    >= 0.2 && < 0.4,
        xlsx                            >= 0.0.2.1 && < 0.1
    exposed-modules:
        Database.PostgreSQL.Sync.Base
        Database.PostgreSQL.Sync
        Database.PostgreSQL.Syncs
        Database.PostgreSQL.Models
        Database.PostgreSQL.Report
        Database.PostgreSQL.Report.Function
        Database.PostgreSQL.Report.Xlsx
        Database.PostgreSQL.Sync.Condition
        Database.PostgreSQL.Sync.Types
        Database.PostgreSQL.Sync.JSON
    other-modules:
        Test
